--- a/DIPR.WebMVC/Views/Bottle/Create.cshtml
+++ b/DIPR.WebMVC/Views/Bottle/Create.cshtml
@@ -15,13 +15,13 @@
     <h4>Add a Bottle</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(model => model.BabyID, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.BabyID, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.BabyID, "", new { @class = "text-danger" })
-        </div>
+<div class="form-group">
+    @Html.LabelFor(model => model.Babies, htmlAttributes: new { @class = "control-label col-md-2" })
+    <div class="col-md-10">
+        @Html.DropDownListFor(model => model.BabyID, Model.Babies, "--Select Baby--", new { @class = "form-control" })
+        @Html.ValidationMessageFor(model => model.Babies, "", new { @class = "text-danger" })
     </div>
+</div>
     <div class="form-group">
         @Html.LabelFor(model => model.Time, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
