--- a/DIPR.WebMVC/Views/Sleep/Create.cshtml
+++ b/DIPR.WebMVC/Views/Sleep/Create.cshtml
@@ -15,13 +15,13 @@
     <h4>Add Sleep Data</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(model => model.BabyID, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.BabyID, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.BabyID, "", new { @class = "text-danger" })
-        </div>
+<div class="form-group">
+    @Html.LabelFor(model => model.Babies, htmlAttributes: new { @class = "control-label col-md-2" })
+    <div class="col-md-10">
+        @Html.DropDownListFor(model => model.BabyID, Model.Babies, "--Select Baby--", new { @class = "form-control" })
+        @Html.ValidationMessageFor(model => model.Babies, "", new { @class = "text-danger" })
     </div>
+</div>
 
     <div class="form-group">
         @Html.LabelFor(model => model.Location, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -34,7 +34,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.SleepStart, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.SleepStart, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EditorFor(model => model.SleepStart, new { htmlAttributes = new { @class = "form-control time" } })
             @Html.ValidationMessageFor(model => model.SleepStart, "", new { @class = "text-danger" })
             <p>Enter time as MM/dd/yy hh:mm AM or PM </p>
             <p>e.g. 12/15/2020 11:30 PM </p>
@@ -81,4 +81,11 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+<script>
+    $('.time').datetimepicker({
+  
+    });
+    </script>
 }
+
+
